# Routing-Algorithms

./: .envrc  .gitignore  TODO.md  pyproject.toml  requirements.txt
Client/: package.json  pnpm-lock.yaml
Client/src/: App.tsx  Canvas.tsx  main.tsx
Client/src/components/ui/: card.tsx
Client/src/lib/: api.ts  types.ts
Server/: app.py  common.py  main.py  node.py  simulate.py  test.py
Server/Simulator/: __init__.py  build.zig  simulator.zig
Server/Simulator/lib/: libSim.pyd
src/: app.py  common.py  create_graph.py  graph.py  main.py  node.py  simulate.py  temp_app.py  test.py
src/Simulator/: __init__.py  build.zig  build.zig.zon  simulator_python.zig
src/test_algos/: GA.py  example.py  test.py
